# lm-research

./: .gitignore  LICENSE  README.md  analyze_dataset.py  dataset_analysis.py  environment.yaml  experiments.md  idle.py  main.py  pyproject.toml  requirements.txt  test_model.py
config/: config.yaml
config/benchmark/: base.yaml
config/dataset/: _base.yaml  slimpajama_120b.yaml  slimpajama_1m.yaml  (+3 more)
configs/: 1l_transformer.json  2l_transformer.json  a1.json  a2.json  a3.json  a4.json  alpha.json  alpha_deep.json  alpha_noff.json  alpha_tiny_noff.json  alpha_v2_tiny.json  august.json  august_2.json  august_large.json  august_small.json  b0.json  b0e.json  b0nl.json  b1.json  b2.json  b3_big.json  b4.json  b4_big.json  beta.json  beta_tiny.json  c1.json  c1_big.json  c2.json  c2_big.json  default.json  delta.json  delta_tiny.json  div.json  divformer.json  epsil.json  epsil_deep.json  g1.json  g2.json  g3.json  gamma.json  (+71 more)
dataset/: babylm.py  bookcorpus.py  dataset.py  disk_dataset.py  slimpajama.py  tinystories_dataset.py  tokenizer.py
models/: a1.py  a2.py  a3.py  a4.py  alpha.py  august.py  b0.py  b0e.py  b0nl.py  b1.py  b2.py  b3.py  b4.py  beta.py  c1.py  c2.py  delta.py  div.py  divformer.py  divm.py  epsil.py  gamma.py  gformer.py  gformer_old.py  gpt.py  gpt2.py  halformer.py  lm.py  mb2.py  mixbig.py  mixed.py  model_util.py  october.py  redred_transformer.py  rrtransformer.py  september.py  sor.py  sstransformer.py  t1.py  t2.py  (+7 more)
util/: device.py  dictionary_learning.py  evaluator.py  generation.py  llm_eval.py  loading.py  sae.py  trainer.py
(+74 files in other folders)
